New Feature added, Application, and other improvements
